--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Friend Finder</title>
-    <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery.js"></script>
@@ -19,18 +18,12 @@
         <p class="lead">You're perfect friend match is out there. Find them on this dope website.</p>
         <hr class="my-4">
         <p>Click the button below to take the survey and see who I match you with.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Find Friend</a>
+        <a class="btn btn-primary btn-lg" href="/survey.html" id="theButton" role="button">Find Friend</a>
     </div>
 
+    <a href="/api/friends">Api List</a>
 
 
-
-    <script type="text/javascript">
- 
-
-
-    
-    </script>
 
 </body>
 
